# pty-wrapper

./: .gitignore  README.md  default.nix  pty-wrapper.cabal  pty-wrapper.nix
app/: Client.hs  Main.hs
src/System/Posix/: PtyWrapper.hs
src/System/Posix/PtyWrapper/: Types.hs
